# ft-translator

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
ft-translator/: Cargo.toml
ft-translator/src/: main.rs  options.rs
src/: file.rs  lib.rs  main.rs  options.rs
translator/: Cargo.toml
translator-cli/: Cargo.toml
translator-cli/src/: lib.rs  options.rs
translator/src/: csv.rs  csv_stream.rs  def.rs  dict.rs  lib.rs  translation.rs
