[package]
name = "ft-translator"
version = "0.1.0"
authors = ["Pierre KOEBELIN <pierre.koebelin@skan.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2"
env_logger = "0.8"
log = "0.4"
translator = { path = "../translator" }

[build-dependencies]
winres = "0.1"